# Triage_Control_App

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  patient.h  serialthread.cpp  serialthread.h  simpleserial.cpp  simpleserial.h
